--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
       "install": "cd client && npm install && cd ../server && npm install",
       "start": "cd client && npm run build && cd ../server && node server"
     },
-    "author": "Ben Wirth",
-    "license": "ISC"
+    "license": "ISC",
+    "engines": {
+      "node": "16"
+    }
   }
   
