--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "license": "ISC",
     "engines": {
       "node": "16"
+    },
+    "dependencies": {
+      "express": "^4.17.3"
     }
   }
   
