--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react": "^18.1.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-sizeme": "^3.0.2"
   },
   "scripts": {
