--- a/client/src/data/projects.json
+++ b/client/src/data/projects.json
@@ -36,7 +36,7 @@
         "about": "In this project, I use multiple REST APIs, the OpenLayers map library, and the Bulma CSS framework to display pollution information within a searched area. The APIs used are the OpenStreetMaps API for geocoding and WAQI for the pollution information. I used the bounding box given by the geocoding API in order to zoom into a location based on the size of the area. I used Bulma mainly for input CSS classes so that I can have a loading icon on any element. This project has taught me how to work with maps within a web application context, use CSS frameworks for specific purposes, and how to interact with a geocoding API.",
         "images": ["images/bluer.png"],
         "repo": "https://github.com/benw10-1/pollution-map",
-        "deployed": "/pollution-map/",
+        "deployed": "/pollutionMap/",
         "tags": ["REST", "map", "API", "Bulma", "pollution", "CSS", "geocoding", "data visualization"]
     },
     {
