--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Fullstack portfolio app",
     "main": "server/server.js",
     "scripts": {
-      "deploy": "git pull origin main && npm install && pm2 start 'npm run start'",
+      "deploy": "git pull origin main && npm install",
       "install": "cd client && npm install && cd ../server && npm install",
-      "start": "cd client && npm run build && cd ../server && node server"
+      "start": "cd server && npm run buildrun"
     },
     "license": "ISC",
     "dependencies": { }
